# graphics-template

./: .gitignore  CMakeLists.txt  README.md  build.bat  setup.bat
Source/: CMakeLists.txt  main.cpp  pch.h
Source/Framework/: CMakeSources.cmake  CommandArgsParser.cpp  CommandArgsParser.h
Source/Framework/Graphics/: Buffer.cpp  Buffer.h  Graphics.cpp  Graphics.h  GraphicsAPI.cpp  GraphicsAPI.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Source/Framework/Importer/: Importer.cpp  Importer.h  SpecificImporter.cpp  SpecificImporter.h
Source/Framework/Importer/Importers/: ALCImporter.cpp  ALCImporter.h
Source/Framework/Manager/: TextureManager.cpp  TextureManager.h
Source/Framework/Resource/: Resource.cpp  Resource.h  Resources.cpp  Resources.h
Source/Framework/Utility/: CommandArgsParser.cpp  CommandArgsParser.h  EnumHelper.h  Exceptions.cpp  Exceptions.h  ISerializable.h  Module.h
